--- a/front_end/app/templates/ssoutput.html
+++ b/front_end/app/templates/ssoutput.html
@@ -167,7 +167,10 @@
         <h3>Another Result:</h3>
         <p class="lead">Now we've taken the input and called a function from your package.<br>The result is...</p>
       </div>
-
+    <div class ="the_plot">
+      <h3>The plot </h3>
+        <img src="http://127.0.0.1:5000/priceplot.png" alt="" border="0">
+    </div>
 
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="static/js/bootstrap.min.js"></script>
