added priceplot to flask

--- a/front_end/app/templates/ssinput.html
+++ b/front_end/app/templates/ssinput.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Steam Sale Predictor</title>
 
     <!-- Bootstrap core CSS -->
      <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -55,8 +55,8 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <br><br><h1>Input</h1>
+        <p class="lead">[text_here].</p>
       </div>
 
     </div><!-- /.container -->
@@ -113,7 +113,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">STEAM Sale Predictor</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
