--- a/front_end/app/templates/ssoutput.html
+++ b/front_end/app/templates/ssoutput.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Steam Sale Forecaster</title>
 
     <!-- Bootstrap core CSS -->
      <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Steam Sale Forecaster</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -51,15 +51,6 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -83,7 +74,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Steam Sale Forecaster</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -113,7 +104,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Steam Sale Forecaster</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -125,22 +116,32 @@
       </div>
     </nav>
 
-<br><br>
-  <div class="container">
-    <div class="starter-template">
-        <h2>Output Page</h2>
-        <p>Enter some user input</p>
+    <br><br>
+       <div class="container">
+        <div class="starter-template">
+          <p class="lead"><h2>The probability of a sale is sunny! </h2></p>
+          <p class="lead"><h3> Past Prices</h3></p>
+          <img src="http://127.0.0.1:5000/priceplot.png" alt="" border="0">
+
+          <img src={{urlin}}>
+        </div>
+      </div>
     </div>
 
-    <div class = "container">
 
-      <form  action="/output" method="GET">
+
+  <div class="container">
+
+    <div class = "container">
+    <br><br>
+      <h2>Enter Game</h2>
+      <form  action="/ssoutput" method="GET">
         <div class="form-group">
-          <label for="ID">City  Name:</label>
+          <label for="ID">App Id:</label>
           <input type="text" id="ID" name='ID' placeholder="e.g. ">
         </div>
         <div>
-          <button type="submit" class="btn btn-default btn-lg">Find this city!</button>
+          <button type="submit" class="btn btn-default btn-lg">Forecast Sale</button>
         </div>
       </form>
     </div>
@@ -148,6 +149,9 @@
     <script src="static/js/bootstrap.min.js"></script>
 
   </div> <!-- /.container-->
+
+
+
 
     <div class="container">
       <div class="starter-template">
@@ -158,19 +162,8 @@
       <div class = "game-info">
         Info is {{game_info}}
       </div>
-
-
      </div><!-- /.container -->
 
-    <div class="container">
-      <div class="starter-template">
-        <h3>Another Result:</h3>
-        <p class="lead">Now we've taken the input and called a function from your package.<br>The result is...</p>
-      </div>
-    <div class ="the_plot">
-      <h3>The plot </h3>
-        <img src="http://127.0.0.1:5000/priceplot.png" alt="" border="0">
-    </div>
 
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="static/js/bootstrap.min.js"></script>
