--- a/front_end/app/templates/ssinput.html
+++ b/front_end/app/templates/ssinput.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Steam Sale Predictor</title>
+    <title>Steam Sale Forecaster</title>
 
     <!-- Bootstrap core CSS -->
      <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Steam Sale Forecaster</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -51,15 +51,6 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-<br><br>
-    <div class="container">
-
-      <div class="starter-template">
-        <br><br><h1>Input</h1>
-        <p class="lead">[text_here].</p>
-      </div>
-
-    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -83,7 +74,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Steam Sale Forecaster</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -101,7 +92,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-<br>
+
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -113,7 +104,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">STEAM Sale Predictor</a>
+          <a class="navbar-brand" href="#">Steam Sale Forecaster</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -125,47 +116,37 @@
       </div>
     </nav>
 
-<br><br>
+
+
   <div class="container">
 
-    <div class="starter-template">
-        <h2>Input Page</h2>
-        <p>Choose Game</p>
-    </div>
-
     <div class = "container">
-
+  
+      <h2>Enter Game</h2>
       <form  action="/ssoutput" method="GET">
         <div class="form-group">
-          <label for="ID">Game Id:</label>
+          <label for="ID">App Id:</label>
           <input type="text" id="ID" name='ID' placeholder="e.g. ">
         </div>
-
         <div>
-          <button type="submit" class="btn btn-default btn-lg">Should I wait?</button>
+          <button type="submit" class="btn btn-default btn-lg">Forecast Sale</button>
         </div>
-
       </form>
     </div>
-
-    <div class="dropdown">
-      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        Choose Game
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li><a href="#">Separated link</a></li>
-      </ul>
-    </div>
-
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+
   </div> <!-- /.container-->
 
+
+
+
+
+      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+      <script src="static/js/bootstrap.min.js"></script>
+
+
+     </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
