--- a/front_end/app/templates/ssoutput.html
+++ b/front_end/app/templates/ssoutput.html
@@ -27,6 +27,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
 
   <body>
@@ -115,10 +116,32 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+      <br>
+    <br>
+
 
     <br><br>
        <div class="container">
         <div class="starter-template">
+
+              <h2>Select Game</h2>
+    
+    <div class="form-group">
+
+    <form  action="/ssoutput" method="GET">
+  <select name="option">
+  {% for o in option_list %}
+      <option value="{{ o.appid }}" SELECTED>{{ o.name }}</option>
+  {% endfor %}
+  </select>
+  </td>
+  <td>
+      <input class="button1" type="submit" value="Forecast Sale">
+  </td>
+  </form>
+  </div> <!-- /.container-->
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
         <br>
           <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{appid}}/header.jpg">
           <p class="lead"><h2>The probability of a sale in the next month is sunny! </h2></p>
@@ -128,28 +151,9 @@
       </div>
     </div>
 
-
-
   <div class="container">
 
     <div class = "container">
-  
-      <h2>Enter Game</h2>
-      <form  action="/ssoutput" method="GET">
-        <div class="form-group">
-          <label for="ID">App Id:</label>
-          <input type="text" id="ID" name='ID' placeholder="e.g. ">
-        </div>
-        <div>
-          <button type="submit" class="btn btn-default btn-lg">Forecast Sale</button>
-        </div>
-      </form>
-    </div>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-
-  </div> <!-- /.container-->
-
 
 
 
